compiler/tests/en/errors/noret_ret.salam
// EXPECT: E012
noret func die():
    ret
end

func main:
    die()
end
